@@ -20,12 +20,41 @@
 #include <map>
 #include <set>
 
-typedef map< pair<int, int>, Tie_configuration *> Tie_configuration_map;
+template<class T, int N>
+struct Tuple
+{
+  T t_array[N];
+  Tuple (T const *src)
+  {
+    for (int i = 0; i < N; i++)
+      t_array[i] = src[i];
+  }
+};
+
+template<class T, int N>
+inline bool
+operator<(Tuple<T, N> const &t1,
+	  Tuple<T, N> const &t2)
+{
+  for (int i = 0; i < N ; i++)
+    {
+      if (t1.t_array[i] > t2.t_array[i])
+	return false;
+      if (t1.t_array[i] < t2.t_array[i])
+	return true;
+    }
+
+  return false;
+}
+
+
+typedef map< Tuple<int,4>, Tie_configuration *> Tie_configuration_map;
 
 struct Tie_specification
 {
   int position_;
   Drul_array<Grob*> note_head_drul_;
+  Drul_array<int> column_ranks_;
   
   bool has_manual_position_;
   bool has_manual_dir_;
@@ -34,6 +63,7 @@ struct Tie_specification
   Direction manual_dir_;
   
   Tie_specification ();
+  int column_span () const;
 };
 
 struct Tie_configuration_variation
@@ -57,8 +87,8 @@ class Tie_formatting_problem
   Grob *x_refpoint_;
 
   
-  Tie_configuration *get_configuration (int position, Direction dir) const;
-  Tie_configuration *generate_configuration (int position, Direction dir) const;
+  Tie_configuration *get_configuration (int position, Direction dir, Drul_array<int> cols) const;
+  Tie_configuration *generate_configuration (int position, Direction dir, Drul_array<int> cols) const;
   vector<Tie_configuration_variation> generate_collision_variations (Ties_configuration const &ties) const;
   vector<Tie_configuration_variation> generate_extremal_tie_variations (Ties_configuration const &ties) const;
 
@@ -77,6 +107,7 @@ class Tie_formatting_problem
 public:
   Tie_details details_;
   void print_ties_configuration (Ties_configuration const *);
+
 public:
   Tie_formatting_problem ();
   ~Tie_formatting_problem ();
@@ -85,6 +116,7 @@ public:
   Ties_configuration generate_optimal_chord_configuration ();
   Ties_configuration generate_ties_configuration (Ties_configuration const &);
   Tie_configuration find_optimal_tie_configuration (Tie_specification const &) const;
+
   void from_ties (vector<Grob*> const &ties);
   void from_tie (Grob *tie);
   void from_semi_ties (vector<Grob*> const &, Direction head_dir);
