@@ -1,5 +1,9 @@
 2006-05-01  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* lily/include/tie-configuration.hh (class Tie_configuration): add
+	column_ranks_ to specification and configuration, to distinguish
+	between ties for different heads in arpegiated chords.
+
 	* lily/relocate.cc (framework_relocation): use INSTALLER_PREFIX.
 
 	* *.py: more 4 space indents.
